--- a/OasisApi.Core/OasisApi.Core/appsettings.json
+++ b/OasisApi.Core/OasisApi.Core/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OracleDbConnection": "User Id=RM557648;Password=fiap;Data Source=oracle.fiap.com.br:1521/ORCL;",
+    "OracleDbConnection": "User Id=RM557648;Password=fiap24;Data Source=oracle.fiap.com.br:1521/ORCL;",
 
     
     "MongoDbConnection": "mongodb+srv://gfranciscosilvapereira_db_user:oasis123456@cluster0.xsherbb.mongodb.net/?appName=Cluster0"
