--- a/OasisApi.Core/OasisApi.Core/OasisApi.Core.csproj
+++ b/OasisApi.Core/OasisApi.Core/OasisApi.Core.csproj
@@ -14,6 +14,7 @@
     </PackageReference>
     <PackageReference Include="MongoDB.Driver" Version="2.27.0" />
     <PackageReference Include="Oracle.EntityFrameworkCore" Version="8.23.40" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
 </Project>
