--- a/OasisApi.Core/OasisApi.Core.Tests/OasisApi.Core.Tests.csproj
+++ b/OasisApi.Core/OasisApi.Core.Tests/OasisApi.Core.Tests.csproj
@@ -15,6 +15,8 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.6" />
+		<PackageReference Include="Microsoft.ML" Version="3.0.1" />
+		<PackageReference Include="Microsoft.ML.FastTree" Version="3.0.1" />
 		<PackageReference Include="Moq" Version="4.20.70" />
 
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
